# pbr_viewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pbrviewer.cpp
data/: DamagedHelmet.gltf  DamagedHelmet_A.dds  DamagedHelmet_AO.dds  DamagedHelmet_E.dds  DamagedHelmet_MR.dds
data/shaders/: direct_pbr.frag  direct_pbr.vert
